<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_bg">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/signup_title_bar_height"
        android:background="@color/tint_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/signup_title"
            android:textColor="@color/tint_color"
            android:textSize="@dimen/signup_title_text_size"
            android:visibility="gone" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:src="@drawable/title_logo" />

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:src="@drawable/title_back_icon" />

        <Button
            android:id="@+id/but_save"
            android:layout_width="@dimen/signup_title_button_width"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/account_save"
            android:textColor="@color/transparent_button_color"
            android:textSize="@dimen/signup_title_button_size" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_title"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/account_item_height"
            android:background="@color/signup_item_background"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/signup_item_padding"
            android:paddingRight="@dimen/signup_item_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/profile_name"
                android:textColor="@android:color/white"
                android:textSize="@dimen/signup_item_text_size" />

            <EditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/signup_item_padding"
                android:background="@null"
                android:enabled="false"
                android:gravity="right|center_vertical"
                android:hint="@string/profile_name"
                android:inputType="textPersonName|textNoSuggestions"
                android:textColor="@color/profile_item_text_color"
                android:textColorHint="@color/signup_item_text_hint"
                android:textSize="@dimen/signup_item_text_size" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/account_item_height"
            android:layout_marginTop="1dp"
            android:background="@color/signup_item_background"
            android:paddingLeft="@dimen/signup_item_padding"
            android:paddingRight="@dimen/signup_item_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:text="@string/profile_age"
                android:textColor="@android:color/white"
                android:textSize="@dimen/signup_item_text_size" />

            <com.diyin.Voltga.widget.NoDefaultSpinner
                android:id="@+id/spin_age"
                android:layout_width="@dimen/profile_spin_age_width"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:dropDownWidth="wrap_content"
                android:prompt="@string/profile_age"
                android:spinnerMode="dropdown" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/account_item_height"
            android:layout_marginTop="1dp"
            android:background="@color/signup_item_background"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/signup_item_padding"
            android:paddingRight="@dimen/signup_item_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/profile_height"
                android:textColor="@android:color/white"
                android:textSize="@dimen/signup_item_text_size" />

            <EditText
                android:id="@+id/edit_height"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/signup_item_padding"
                android:background="@null"
                android:gravity="right|center_vertical"
                android:hint="@string/profile_height"
                android:inputType="textNoSuggestions"
                android:textColor="@color/profile_item_text_color"
                android:textColorHint="@color/signup_item_text_hint"
                android:textSize="@dimen/signup_item_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/account_item_height"
            android:layout_marginTop="1dp"
            android:background="@color/signup_item_background"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/signup_item_padding"
            android:paddingRight="@dimen/signup_item_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/profile_weight"
                android:textColor="@android:color/white"
                android:textSize="@dimen/signup_item_text_size" />

            <EditText
                android:id="@+id/edit_weight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/signup_item_padding"
                android:background="@null"
                android:gravity="right|center_vertical"
                android:hint="@string/profile_weight"
                android:inputType="numberDecimal"
                android:textColor="@color/profile_item_text_color"
                android:textColorHint="@color/signup_item_text_hint"
                android:textSize="@dimen/signup_item_text_size" />

            <TextView
                android:id="@+id/text_lbs"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text=" lbs"
                android:gravity="right|center_vertical"
                android:textColor="@color/profile_item_text_color"
                android:textSize="@dimen/signup_item_text_size" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/account_item_height"
            android:layout_marginTop="1dp"
            android:background="@color/signup_item_background"
            android:paddingLeft="@dimen/signup_item_padding"
            android:paddingRight="@dimen/signup_item_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/profile_ethnicity"
                android:textColor="@android:color/white"
                android:textSize="@dimen/signup_item_text_size" />

            <com.diyin.Voltga.widget.NoDefaultSpinner
                android:id="@+id/spin_ethnicity"
                android:layout_width="@dimen/profile_spin_age_width"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:dropDownWidth="wrap_content"
                android:prompt="@string/profile_ethnicity"
                android:spinnerMode="dropdown" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/account_item_height"
            android:layout_marginTop="1dp"
            android:background="@color/signup_item_background"
            android:paddingLeft="@dimen/signup_item_padding"
            android:paddingRight="@dimen/signup_item_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/profile_body"
                android:textColor="@android:color/white"
                android:textSize="@dimen/signup_item_text_size" />

            <com.diyin.Voltga.widget.NoDefaultSpinner
                android:id="@+id/spin_body"
                android:layout_width="@dimen/profile_spin_age_width"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:dropDownWidth="wrap_content"
                android:prompt="@string/profile_body"
                android:spinnerMode="dropdown" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/account_item_height"
            android:layout_marginTop="1dp"
            android:background="@color/signup_item_background"
            android:paddingLeft="@dimen/signup_item_padding"
            android:paddingRight="@dimen/signup_item_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/profile_practice"
                android:textColor="@android:color/white"
                android:textSize="@dimen/signup_item_text_size" />

            <com.diyin.Voltga.widget.NoDefaultSpinner
                android:id="@+id/spin_practice"
                android:layout_width="@dimen/profile_spin_age_width"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:dropDownWidth="wrap_content"
                android:prompt="@string/profile_practice"
                android:spinnerMode="dropdown" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/account_item_height"
            android:layout_marginTop="1dp"
            android:background="@color/signup_item_background"
            android:paddingLeft="@dimen/signup_item_padding"
            android:paddingRight="@dimen/signup_item_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/profile_status"
                android:textColor="@android:color/white"
                android:textSize="@dimen/signup_item_text_size" />

            <com.diyin.Voltga.widget.NoDefaultSpinner
                android:id="@+id/spin_status"
                android:layout_width="@dimen/profile_spin_age_width"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:dropDownWidth="wrap_content"
                android:prompt="@string/profile_status"
                android:spinnerMode="dropdown" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:background="@color/signup_item_background"
            android:padding="@dimen/signup_item_padding">

            <TextView
                android:id="@+id/text_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_intro"
                android:textColor="@android:color/white"
                android:textSize="@dimen/signup_item_text_size" />

            <EditText
                android:id="@+id/edit_intro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/signup_item_padding"
                android:layout_toRightOf="@+id/text_status"
                android:background="@null"
                android:gravity="right"
                android:hint="@string/profile_intro"
                android:textColor="@color/profile_item_text_color"
                android:textColorHint="@color/signup_item_text_hint"
                android:textSize="@dimen/signup_item_text_size" />

        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>