<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/account_background">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusableInTouchMode="true"
        android:focusable="true" />

    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/signup_title_bar_height"
        android:background="@color/tint_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/signup_title"
            android:textColor="@color/tint_color"
            android:textSize="@dimen/signup_title_text_size"
            android:visibility="gone" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:src="@drawable/title_logo" />

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:src="@drawable/title_back_icon" />

        <Button
            android:id="@+id/but_save"
            android:layout_width="@dimen/signup_title_button_width"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/account_save"
            android:textColor="@color/transparent_button_color"
            android:textSize="@dimen/signup_title_button_size" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_title"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/signup_item_height"
            android:paddingLeft="@dimen/signup_item_padding"
            android:paddingRight="@dimen/signup_item_padding"
            android:background="@color/signup_item_background"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/signup_item_text_size"
                android:layout_gravity="center_vertical"
                android:text="@string/signup_email_hint"/>

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/signup_item_padding"
                android:background="@null"
                android:textSize="@dimen/signup_item_text_size"
                android:inputType="textEmailAddress"
                android:textColor="@color/signup_item_text"
                android:textColorHint="@color/signup_item_text_hint"
                android:hint="@string/signup_email_hint"
                android:gravity="right|center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/signup_item_height"
            android:layout_marginTop="1dp"
            android:paddingLeft="@dimen/signup_item_padding"
            android:paddingRight="@dimen/signup_item_padding"
            android:background="@color/signup_item_background"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/signup_item_text_size"
                android:layout_gravity="center_vertical"
                android:text="@string/account_curpassword"/>

            <EditText
                android:id="@+id/edit_cupassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/signup_item_padding"
                android:background="@null"
                android:textSize="@dimen/signup_item_text_size"
                android:inputType="textPassword"
                android:textColor="@color/signup_item_text"
                android:textColorHint="@color/signup_item_text_hint"
                android:hint="@string/account_curpassword"
                android:gravity="right|center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/signup_item_height"
            android:layout_marginTop="1dp"
            android:paddingLeft="@dimen/signup_item_padding"
            android:paddingRight="@dimen/signup_item_padding"
            android:background="@color/signup_item_background"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/signup_item_text_size"
                android:layout_gravity="center_vertical"
                android:text="@string/account_newpassword"/>

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/signup_item_padding"
                android:background="@null"
                android:textSize="@dimen/signup_item_text_size"
                android:inputType="textPassword"
                android:textColor="@color/signup_item_text"
                android:textColorHint="@color/signup_item_text_hint"
                android:hint="@string/account_newpassword"
                android:gravity="right|center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/signup_item_height"
            android:layout_marginTop="1dp"
            android:paddingLeft="@dimen/signup_item_padding"
            android:paddingRight="@dimen/signup_item_padding"
            android:background="@color/signup_item_background"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/signup_item_text_size"
                android:layout_gravity="center_vertical"
                android:text="@string/signup_cpassword_hint"/>

            <EditText
                android:id="@+id/edit_cpassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/signup_item_padding"
                android:background="@null"
                android:textSize="@dimen/signup_item_text_size"
                android:inputType="textPassword"
                android:textColor="@color/signup_item_text"
                android:textColorHint="@color/signup_item_text_hint"
                android:hint="@string/signup_cpassword_hint"
                android:gravity="right|center_vertical"/>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>